<resources>
    <string name="app_name">Calculator</string>
    <string name="num1_hint">enter num 1</string>
    <string name="num2_hint">enter num 2</string>
    <string name="res_hint">0.00</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="power">N1^N2</string>
    <string name="remainder">N1%N2</string>
    <string name="clr">clear</string>
</resources>